# ai-agents-py

./: README.md  main.py  pyproject.toml
agents/simple_bot/: Agent_Bot.py
basics/conditional_agent/: Conditional_Agent.ipynb
basics/hello_world/: Hello_World.ipynb
basics/looping/: Looping.ipynb
basics/multi_inputs/: Multiple_Inputs.ipynb
basics/sequential_agent/: Sequential_agent.ipynb
hello_world/: Hello_World.ipynb
