[project]
name = "ai-agents-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.3.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.21",
    "langgraph>=0.4.8",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
